--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -14,7 +14,7 @@ services:
         ports:
             - 8088:80
         volumes:
-            - ../:${project_name}
+            - ../:/var/www/${PROJECT_NAME}
             - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
         depends_on:
             - php
@@ -51,7 +51,7 @@ services:
         ports:
             - 9000:9000
         volumes:
-            - ../:/var/www/l9-with-sass
+            - ../:/var/www/${PROJECT_NAME}
         networks:
             - laravel
 
@@ -59,10 +59,10 @@ services:
         image: composer:latest
         container_name: composer
         volumes:
-            - ../:/var/www/l9-with-sass
+            - ../:/var/www/${PROJECT_NAME}
         depends_on:
             - php
-        working_dir: /var/www/l9-with-sass # writes npm before our command. So, instead `docker-compose run --rm composer composer install` we can go for `docker-compose run --rm composer install`
+        working_dir: /var/www/${PROJECT_NAME} # writes npm before our command. So, instead `docker-compose run --rm composer composer install` we can go for `docker-compose run --rm composer install`
         entrypoint: composer
         command: install
         # this command will make the composer run for ever.
@@ -74,8 +74,8 @@ services:
         image: node:latest
         container_name: npm
         volumes:
-            - ../:/var/www/l9-with-sass
-        working_dir: /var/www/l9-with-sass
+            - ../:/var/www/${PROJECT_NAME}
+        working_dir: /var/www/${PROJECT_NAME}
         # writes npm before our command. So, instead `docker-compose run --rm npm npm install` we can go for `docker-compose run --rm npm install`
         entrypoint: npm
         # keep this command to install npm dependencies if entry point is
@@ -89,11 +89,11 @@ services:
             dockerfile: artisan.dockerfile
         container_name: artisan
         volumes:
-            - ../:/var/www/l9-with-sass
+            - ../:/var/www/${PROJECT_NAME}
         depends_on:
             - mysql
             - composer
-        working_dir: /var/www/l9-with-sass
+        working_dir: /var/www/${PROJECT_NAME}
         entrypoint: php artisan
         networks:
             - laravel
