--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     listen [::]:80;
     server_name localhost; # Update to server name
-    root /var/www/l9-with-sass/public; # Update to public root directory
+    root /var/www/example-app/public; # Update to public root directory. /var/www/${PROJECT_NAME}/public
 
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
