--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,5 +1,5 @@
 version: "3.9"
-    
+
 networks:
     laravel:
 
@@ -69,7 +69,7 @@ services:
             - php
         working_dir: /var/www/${PROJECT_NAME} # writes npm before our command. So, instead `docker-compose run --rm composer composer install` we can go for `docker-compose run --rm composer install`
         entrypoint: composer
-        command: install
+        # command: install
         # this command will make the composer run for ever.
         # command: tail -f /dev/null
         networks:
@@ -86,7 +86,7 @@ services:
         # writes npm before our command. So, instead `docker-compose run --rm npm npm install` we can go for `docker-compose run --rm npm install`
         entrypoint: npm
         # keep this command to install npm dependencies if entry point is
-        command: install
+        # command: install
         networks:
             - laravel
 
@@ -99,9 +99,8 @@ services:
         container_name: artisan
         volumes:
             - ../:/var/www/${PROJECT_NAME}
-        depends_on:
-            - mysql
-            - composer
+        # depends_on:
+        #     - mysql
         working_dir: /var/www/${PROJECT_NAME}
         entrypoint: php artisan
         networks:
